# VIGOR

./: .gitignore  .gitmodules  README.md  common.py  infer_dpo.py  inference_tts.py  pyproject.toml  requirements.txt  run_bon.py  visualize_error_mask.py
bon/: __init__.py  best_of_n.py
caption/: generate_caption.py
caption/config/: config.json
dpo/: __init__.py  inference.py
dpo/model_training/: README.md  download.sh  preprocess_dpo_data.py
dpo/model_training/reward_lora/: dataset.py  generate_hybrid.py  train_hybrid.py  train_sft.py
dpo/model_training/reward_lora/config/: test_hybrid.yaml  train.yaml
metrics/: evaluate_all.py  evaluate_flat.py
metrics/config/: config.json
metrics/evaluator/: __init__.py  epipolar.py  reprojection.py  reprojection_vanilla.py
model_training/: download.sh  preprocess_dpo_data.py  requirements.txt
model_training/reward_lora/: dataset.py  generate_restart.py  improved_captions.json  loss.py  train.py  train_hybrid.py  train_restart.py  train_sft_dpo_hybrid.py
model_training/reward_lora/config/: test.yaml  test_restart.yaml  train.yaml  train_restart.yaml
prompts/: demos.txt
rewards/: evaluate.py
rewards/config/: config.json
rewards/evaluator/: epipolar.py  reproj_pix.py  reproj_pts.py
tts/: __init__.py  tts_common.py
tts/algorithms/: __init__.py  bs.py  sop.py  sos.py
videogen/: generate_video.py
videogen/config/: config.json
